bring in the font

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link rel="preconnect" href="https://api.fonts.coollabs.io" />
+    <link
+      href="https://api.fonts.coollabs.io/css2?family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | QR code component</title>
 
     <link rel="stylesheet" href="style.css" />
