fix subtitile placement in markup

--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
           to the next level
         </p>
       </div>
+      <p class="subtitle">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/resultfulness">resultfulness</a>.
+      </p>
     </main>
-    <p>
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
-      Coded by <a href="https://github.com/resultfulness">resultfulness</a>.
-    </p>
   </body>
 </html>
