--- a/index.html
+++ b/index.html
@@ -23,21 +23,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
-      <div class="card">
-        <img src="./images/image-qr-code.png" alt="qr code" />
-        <h1>Improve your front-end skills by building projects</h1>
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
-      </div>
-      <p class="subtitle">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a
-        >. Coded by
-        <a href="https://github.com/resultfulness">resultfulness</a>.
+    <div class="card">
+      <img src="./images/image-qr-code.png" alt="qr code" />
+      <h1>Improve your front-end skills by building projects</h1>
+      <p>
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level
       </p>
-    </main>
+    </div>
   </body>
 </html>
